--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
-  "name": "file-upload-app",
+  "name": "frontend",
   "version": "1.0.0",
   "scripts": {
-    "start": "vite",
+    "dev": "vite",
     "build": "vite build",
     "serve": "vite preview"
   },
+  "dependencies": {
+    "vue": "^3.0.0",
+    "vue-router": "^4.0.0"
+  },
   "devDependencies": {
     "vite": "^2.0.0",
-    "@vitejs/plugin-react": "^1.0.0"
-  },
-  "dependencies": {
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
-    "axios": "^0.21.1"
+    "typescript": "^4.0.0"
   }
 }
